--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "@web-ui-test/source",
-  "version": "0.0.0",
+  "name": "intevel-web-ui",
+  "version": "0.0.1",
   "license": "MIT",
-  "scripts": {},
+  "private": false,
+  "scripts": {
+    "build": "nx run-many --target=build"
+  },
+  "exports": {
+    "./utils": {
+      "import": "./packages/utils/dist/index.js",
+      "require": "./packages/utils/dist/index.js",
+      "types": "./packages/utils/dist/index.d.ts"
+    }
+  },
   "dependencies": {},
   "devDependencies": {
     "@nx/js": "20.4.0",
